# mkbak

./: .gitignore  .scrutinizer.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  IDEAS.md  LICENSE  README.md  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-package.yml
mkbak/: __init__.py  __init__.pyi  __main__.py  main.py
mkbak/mkbak_args/: __init__.py  __init__.pyi
