[tool.poetry]
name = "mkbak"
version = "0.5.1"
description = "make backups of files in a given directory"
authors = ["sudo-julia <jlearning@tuta.io>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
iterfzf = "^0.5.0"
rich = "^9.8.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
